--- a/qg-goods-provider/src/main/resources/application-company.properties
+++ b/qg-goods-provider/src/main/resources/application-company.properties
@@ -1,7 +1,7 @@
 ##数据源配置
-spring.datasource.url=jdbc:mysql://192.168.9.150:3306/qg_goods_db?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qg_goods_db?characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ##mapper文件扫描路径
@@ -9,13 +9,13 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 ##dubbo注册地址
 spring.dubbo.appname=spring-boot-starter-dubbo-goods-provider
-spring.dubbo.registry=zookeeper://192.168.9.150:2181
+spring.dubbo.registry=zookeeper://127.0.0.1:2181
 spring.dubbo.protocol=dubbo
 spring.dubbo.port=20804
 
 ##配置Redis
 spring.redis.database=1
-spring.redis.host=192.168.9.150
+spring.redis.host=192.168.217.128
 spring.redis.port=6379
 spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
