--- a/qg-common-parent/pom.xml
+++ b/qg-common-parent/pom.xml
@@ -14,6 +14,12 @@
         <module>qg-common-utils</module>
         <module>qg-common-service</module>
     </modules>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+    </dependencies>
 
 </project>
